[project]
name = "use_case_orchestration"
version = "0.1.0"
description = "Orchestrate use case exploration and visualization with Miro integration."
authors = [
    { name = "Luisa Orozco", email = "luisitafer14@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.21",
    "openai>=1.0",
    "requests>=2.28"
]

[tool.setuptools]
packages = ["miro"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"